[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN", "COM", "EM",
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "W191", "E501", "D206", "Q000", "Q001", "Q002", "Q003", "ISC001",
  "D203", "D212",  # incompatible rules
  "D200",  # documentation preferences
  "C901", "PLR091",  # complexity preferences
  "D100", "D104", # docstrings
  "ARG001", "ARG002",  # unused arguments (callbacks)
  "PYI024",  # Python 3.10 has no generic namedtuples
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["copyright"]

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["INP001"]  # no __init__.py file
"tests/*" = [
  "D",  # docstring
  "ARG001",  # unused pytest fixture
  "FBT003",  # boolean positional value
  "PLR2004", # unnamed constant value
  "PLW0602",  # globals
  "PLW0603",  # globals
  "PT004",  # fixture naming convention
  "S101",  # assert
  "TRY002",  # raise
]
"tests/fixtures/*" = [
  "INP001",  # no __init__.py file
  "T201",  # print
]
