[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "yapw"
version = "0.1.4"
authors = [{name = "Open Contracting Partnership", email = "data@open-contracting.org"}]
description = "A Pika wrapper with error handling, signal handling and good defaults."
readme = "README.rst"
license = {text = "BSD"}
urls = {Homepage = "https://github.com/open-contracting/yapw"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.10"
dependencies = [
    "pika>=1.2.0",
    "typing-extensions;python_version<'3.8'",
]

[project.optional-dependencies]
perf = ["orjson"]
test = [
    "coverage",
    "pytest",
]
types = [
    "mypy",
    "types-orjson",
    "types-pika",
]

[tool.setuptools.packages.find]
exclude = [
    "tests",
    "tests.*",
]

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN", "COM", "EM",
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "W191", "D206", "Q000", "Q001", "Q002", "Q003", "ISC001",
  "D203", "D212",  # incompatible rules
  "D200",  # documentation preferences
  "C901", "PLR091",  # complexity preferences
  "D100", "D104", # docstrings
  "ARG001", "ARG002",  # unused arguments (callbacks)
  "PYI024",  # Python 3.10 has no generic namedtuples
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["copyright"]

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["INP001"]  # no __init__.py file
"tests/*" = [
  "D",  # docstring
  "ARG001",  # unused pytest fixture
  "FBT003",  # boolean positional value
  "PLR2004", # unnamed constant value
  "PT004",  # fixture naming convention
  "S101",  # assert
  "TRY002",  # raise
]
"tests/fixtures/*" = [
  "INP001",  # no __init__.py file
  "T201",  # print
]
